--- a/papkviznew.html
+++ b/papkviznew.html
@@ -38,6 +38,36 @@
         #question-list {
             padding: 20px;
         }
+		button {
+            font-size: 1.2em;
+            padding: 10px 15px;
+            margin: 5px 0;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            background-color: #007BFF;
+            color: white;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        button:disabled {
+            background-color: #cccccc;
+            cursor: not-allowed;
+        }
+        .question-container button {
+            margin-right: 10px;
+        }
+        .next-question-container {
+            display: flex;
+            justify-content: flex-start;
+            margin-top: 10px;
+        }
+        hr {
+            border: 1px solid #ccc;
+            margin: 20px 0;
+        }
     </style>
 </head>
 <body>
@@ -95,31 +125,32 @@
                 revealAnswerButton.disabled = true;
             };
             questionDiv.appendChild(revealAnswerButton);
+			
+			const revealNumberButton = document.createElement('button');
+            revealNumberButton.textContent = "Broj pitanja";
+            revealNumberButton.onclick = () => {
+                const number = document.createElement('p');
+                number.textContent = `Broj pitanja: ${question.Rbr}`;
+                questionDiv.appendChild(number);
+                revealNumberButton.disabled = true;
+                autoScrollToBottom();
+            };
+            questionDiv.appendChild(revealNumberButton);
 
             container.appendChild(questionDiv);
             container.appendChild(document.createElement('hr'));
+        }
+		
+		function autoScrollToBottom() {
+            window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
         }
 
         document.addEventListener('DOMContentLoaded', async () => {
             const questions = await loadCSV('pubquiz2.csv');
             const questionList = document.getElementById('question-list');
             const toggleButtons = document.querySelectorAll('.toggle');
-            let selectedRanges = [[1, 200], [201, 400], [401, 600], [601, 800], [801, 1000]];
+            let selectedRanges = [[1, 200], [201, 400], [401, 600],[601, 800], [901, 1000]];
             let playedQuestions = new Set();
-
-            function loadNextQuestion() {
-                let question = getRandomQuestion(questions, selectedRanges, playedQuestions);
-                if (!question) {
-                    questionList.innerHTML = "<p>Nema više dostupnih pitanja.</p>";
-                    return;
-                }
-                renderQuestion(question, questionList);
-                
-                const nextQuestionButton = document.createElement('button');
-                nextQuestionButton.textContent = "Dalje";
-                nextQuestionButton.onclick = loadNextQuestion;
-                questionList.appendChild(nextQuestionButton);
-            }
 
             toggleButtons.forEach(button => {
                 button.addEventListener('click', () => {
@@ -127,13 +158,35 @@
                     const rangeIndex = selectedRanges.findIndex(([rMin, rMax]) => rMin === min && rMax === max);
                     if (rangeIndex > -1) {
                         selectedRanges.splice(rangeIndex, 1);
+                        button.classList.remove('on');
                         button.classList.add('off');
                     } else {
                         selectedRanges.push([min, max]);
                         button.classList.remove('off');
+                        button.classList.add('on');
                     }
                 });
             });
+
+
+            function loadNextQuestion() {
+                let question = getRandomQuestion(questions, selectedRanges, playedQuestions);
+                if (!question) {
+                    const warning = document.createElement('p');
+                    warning.textContent = "Nema više pitanja u odabranim rasponima.";
+                    questionList.appendChild(warning);
+                    return;
+                }
+                renderQuestion(question, questionList);
+                const nextQuestionButtonContainer = document.createElement('div');
+                nextQuestionButtonContainer.classList.add('next-question-container');
+                const nextQuestionButton = document.createElement('button');
+                nextQuestionButton.textContent = "Dalje";
+                nextQuestionButton.onclick = loadNextQuestion;
+                nextQuestionButtonContainer.appendChild(nextQuestionButton);
+                questionList.appendChild(nextQuestionButtonContainer);
+                autoScrollToBottom();
+            }
 
             loadNextQuestion();
         });
