--- a/staro/papkviz.html
+++ b/staro/papkviz.html
@@ -38,7 +38,7 @@
         #question-list {
             padding: 20px;
         }
-		button {
+        button {
             font-size: 1.2em;
             padding: 10px 15px;
             margin: 5px 0;
@@ -74,19 +74,16 @@
     <div class="sticky-header">
         <h2>Pap Kviz Trening!</h2>
         <div class="controls">
-            <span>Set:</span>
             <button class="toggle on" data-range="1-200">1</button>
             <button class="toggle on" data-range="201-400">2</button>
             <button class="toggle on" data-range="401-600">3</button>
-            <button class="toggle on" data-range="601-800">4</button>
-            <button class="toggle on" data-range="801-1000">5</button>
+			<button class="toggle on" data-range="601-800">4</button>
+			<button class="toggle on" data-range="801-1000">5</button>
         </div>
     </div>
     <div id="question-list"></div>
 
     <script>
-        let questionCount = 0;
-
         async function loadCSV(file) {
             const response = await fetch(file);
             const data = await response.text();
@@ -108,12 +105,11 @@
         }
 
         function renderQuestion(question, container) {
-            questionCount++;
             const questionDiv = document.createElement('div');
             questionDiv.classList.add('question-container');
 
             const title = document.createElement('h3');
-            title.textContent = `${questionCount}. ${question.Tekst}`;
+            title.textContent = `${question.Tekst}`;
             questionDiv.appendChild(title);
 
             const revealAnswerButton = document.createElement('button');
@@ -123,10 +119,11 @@
                 answer.textContent = `Odgovor: ${question.Odgovor}`;
                 questionDiv.appendChild(answer);
                 revealAnswerButton.disabled = true;
+                autoScrollToBottom();
             };
             questionDiv.appendChild(revealAnswerButton);
-			
-			const revealNumberButton = document.createElement('button');
+            
+            const revealNumberButton = document.createElement('button');
             revealNumberButton.textContent = "Broj pitanja";
             revealNumberButton.onclick = () => {
                 const number = document.createElement('p');
@@ -140,8 +137,8 @@
             container.appendChild(questionDiv);
             container.appendChild(document.createElement('hr'));
         }
-		
-		function autoScrollToBottom() {
+
+        function autoScrollToBottom() {
             window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
         }
 
@@ -167,7 +164,6 @@
                     }
                 });
             });
-
 
             function loadNextQuestion() {
                 let question = getRandomQuestion(questions, selectedRanges, playedQuestions);
